<resources>

    <string name="app_name">小熊词典</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="query_word">查词</string>
    <string name="words_list">生词本</string>
    <string name="query_word_id">1</string>
    <string name="words_list_id">2</string>
    <string name="menu_close">退出</string>
    <string name="menu_online_dictionary">离线词典</string>
    <string name="progress_downloading">正在检查更新...</string>
    <string name="progress_wait">请您稍等</string>
    <string name="progress_error">非常抱歉 ，更新失败了</string>
    <string name="progress_success">获取更新成功</string>
    <string name="start_download">开始下载</string>
    <string name="dictionary_download">下载</string>
    <string name="download_size">大小:</string>
    <string name="json_parse_error">实在抱歉,数据转换出错了,暂时无法更新</string>
    <string name="dictionary_name">柯林斯字典-离线版</string>
    <string name="first_move_alert">您是第一次打开，需要花些时间做初始化工作。</string>
    <string name="move_start">开始</string>
    <string name="ok">确定</string>
    <string name="no">重选</string>
    <string name="cancel">取消</string>
    <string name="move_dialog_title">提示</string>
    <string name="move_dialog_content">正在移动文件中,请不要中断</string>
    <string name="search_word">搜索单词</string>
    <string name="search">搜索</string>
    <string name="dictionary_offline_list">离线字典</string>
    <string name="dictionary_size">大小</string>
    <string name="dictionary_downloading">正在下载</string>
    <string name="file_create_error">文件创建失败，请检查您的SD卡设置</string>
    <string name="connection_error">网络链接错误，请稍后再试</string>
    <string name="downloading">正在下载</string>
    <string name="download_finished">已经下载完成</string>
    <string name="download_cancel">取消下载</string>
    <string name="setting">设置</string>
    <string name="settingText">设置全局字体</string>
    <string name="settingHands">设置手持模式</string>
    <string name="settingClose">关闭</string>
    <string name="settingOpen">开启</string>
    <string name="settingRightHandMode">右手模式</string>
    <string name="settingSmall">小字体规格</string>
    <string name="settingMedium">中等字体规格</string>
    <string name="settingLarge">大字体规格</string>
    <string name="settingTextTips">设置字体大小</string>
    <string name="settingFont">设置字体类型</string>
    <string name="settingLeftMode">左手模式</string>
    <string name="settingRightMode">右手模式</string>
    <string name="settingDefaultMode">默认模式</string>
    <string name="no_sd_alert">我们非常的抱歉，因为要离线的缘故，字典一定要工作在SD卡存在的情况下。</string>
    <string name="alert">提示</string>
    <string name="close">关闭</string>
    <string name="no_dict">您还没有下载任何离线词典，建议您在wifi环境下下载您所选的词典</string>
    <string name="to_download">去下载</string>
    <string name="import_offline_dictionary">导入离线词典</string>
    <string name="show_hidden_file">显示隐藏文件/文件夹</string>
    <string name="show_hidden_file_desc">显示以点（.）开头的隐藏文件</string>
    <string name="show_preview">显示预览</string>
    <string name="show_preview_desc">显示图片文件的缩略图</string>
    <string name="sort_method">排序方法</string>
    <string name="sort_method_desc">选择文件和文件夹的排序方式</string>
    <string name="settings">设置</string>
    <string name="sort_by">排序按\.\.\.</string>
    <string name="sort_none">无</string>
    <string name="sort_alphabetical">字母表</string>
    <string name="sort_type">类型</string>
    <string name="sort_size">大小</string>
    <string name="permission">由于权限问题，无法读取该目录</string>
    <string name="sure_this_directory">确定此文件？</string>
    <string name="start_unzip">开始解压</string>
    <string name="prepare_to_unzip">准备解压</string>
    <string name="unzipping">正在解压</string>
    <string name="unzip_finish">解压完成</string>
    <string name="unzip_finish_start_deal">解压结束，正在处理\.\.\.</string>
    <string name="still_wait">依旧请耐心等待，这个操作会很快结束</string>
    <string name="unzip_error">解压出错了</string>
    <string name="unzip_tip">解压可能比较慢，请您稍等</string>
    <string name="unzip_already">当前文件正在解压，请不要着急</string>
    <string name="root_directory_tip">已经到达根目录了，再按Back键将结束选择</string>

</resources>