<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/main_top"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/main_header_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/lightblack" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_header"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/main_top"
        android:baselineAligned="false" >

        <Button
            android:id="@+id/btn_query_word"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/query_word_id"
            android:gravity="center"
            android:text="@string/query_word"
            android:textColor="@color/navigate_text_color"
            android:textSize="@dimen/navigate_text_size" >
        </Button>

        <Button
            android:id="@+id/btn_words_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/words_list_id"
            android:gravity="center"
            android:text="@string/words_list"
            android:textColor="@color/navigate_text_color"
            android:textSize="@dimen/navigate_text_size" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/main_header"
        android:background="@color/gray" >

        <View
            android:id="@+id/line_btn_query_word"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/navigate_line_green"
            android:tag="line_0" />

        <View
            android:id="@+id/line_btn_words_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/gray"
            android:tag="line_1" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/line_wrapper" />

</RelativeLayout>